- Counterclockwise was too chatty when files were dragged from the filesystem (e.g. dragging jar files was triggering the 'do you want to create a leiningen project?' popup).
- Counterclockwise was triggering many times the 'do you want to create a leiningen project?' popup after a user declined or failed drag.

== Changes between Counterclockwise 0.28.1 and 0.29.0

`0.29.0` released on October 20, 2014

This release is mostly a maintenance release. It is also the first release embedding Leiningen 2.5.0 instead of Leiningen 2.3.4.

=== Fix

- Removed default keybinding kbd:[Alt+Command+Q E] for command 'New REPL client for Eclipse embedded nrepl server (advanced usages) which was conflicting with a JDT command
- Fixed `Convert to Clojure Project` when one wants a quick & dirty way to add clojure jar to a project classpath
- Dragging a leiningen project already placed inside the workspace folder now works (was throwing an exception previously)

=== Enhancements
- Embedded Leiningen version upgraded from version 2.3.4 to 2.5.0
- Leiningen Automatic detection now works only if the project does not already have Java Classpath metadata set (technically speaking: if the project does not have the Java Nature).
- Added command `Remove Leiningen Support` to the `Leiningen` contextual menu. Removes the `Leiningen` Support, but will not touch the project's `Java build path`. Fix Issue #663.
- REPL View visual hint (<type clojure code here>) is displayed according to the menu:Preferences[Clojure > REPL View > Show hints] Preference. Fixes #662 - Toggle REPL hint (Settings)


== Changes between Counterclockwise 0.28.0 and 0.28.1

`0.28.1` released on September 28, 2014

=== Fix

- Drag & Drop from Github / Bitbucket / Google Code URLs works in Linux

=== Enhancements

==== Leiningen / Clojure autodetection

- Added a check for missing `.classpath` file for Leiningen projects. Automatically reconstruct the java build path if it is missing.